# lyric-tui

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
docs/: advanced_integrations.md  configuration.md  development.md
docs/architecture/: README.md  timeline_tracker.md
src/: app.rs  cli.rs  events.rs  main.rs
src/media_monitor/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/providers/: cache.rs  genius.rs  lrclib.rs  mod.rs  sanitiser.rs
src/ui/: footer.rs  header.rs  help.rs  lyrics.rs  mod.rs  search.rs  select_player.rs  theme.rs
